// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div>
  <AzureProjectAccordion
    importing={false}
    key="azure-project-1"
    loading={false}
    onOpen={[MockFunction]}
    onSelectRepository={[MockFunction]}
    project={
      Object {
        "description": "Azure Project",
        "name": "azure-project-1",
      }
    }
    repositories={Array []}
    startsOpen={true}
  />
  <ListFooter
    count={1}
    loadMore={[Function]}
    total={1}
  />
</div>
`;

exports[`should render correctly: empty 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="onboarding.create_project.azure.no_projects"
    id="onboarding.create_project.azure.no_projects"
    values={
      Object {
        "link": <Link
          to={
            Object {
              "pathname": "/projects/create",
              "search": "?mode=azure&resetPat=1",
            }
          }
        >
          onboarding.create_project.update_your_token
        </Link>,
      }
    }
  />
</Alert>
`;

exports[`should render search results correctly: default 1`] = `
<div>
  <AzureProjectAccordion
    importing={false}
    key="p2 - result"
    loading={false}
    onOpen={[MockFunction]}
    onSelectRepository={[MockFunction]}
    project={
      Object {
        "description": "p2",
        "name": "p2",
      }
    }
    repositories={
      Array [
        Object {
          "name": "Azure repo 1",
          "projectName": "p2",
        },
      ]
    }
    startsOpen={true}
  />
  <ListFooter
    count={1}
    loadMore={[Function]}
    total={1}
  />
</div>
`;

exports[`should render search results correctly: empty 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  onboarding.create_project.azure.no_results
</Alert>
`;
